; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_FileIO.c_IsFileWriteLockedW.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_FileIO.c_IsFileWriteLockedW.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @IsFileWriteLockedW(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = icmp eq i32* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %22

8:                                                ; preds = %1
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @IsFileExistsW(i32* %9)
  %11 = icmp eq i32 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %8
  store i32 0, i32* %2, align 4
  br label %22

13:                                               ; preds = %8
  %14 = load i32*, i32** %3, align 8
  %15 = call i32* @FileOpenW(i32* %14, i32 1)
  store i32* %15, i32** %4, align 8
  %16 = load i32*, i32** %4, align 8
  %17 = icmp eq i32* %16, null
  br i1 %17, label %18, label %19

18:                                               ; preds = %13
  store i32 1, i32* %2, align 4
  br label %22

19:                                               ; preds = %13
  %20 = load i32*, i32** %4, align 8
  %21 = call i32 @FileClose(i32* %20)
  store i32 0, i32* %2, align 4
  br label %22

22:                                               ; preds = %19, %18, %12, %7
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i32 @IsFileExistsW(i32*) #1

declare dso_local i32* @FileOpenW(i32*, i32) #1

declare dso_local i32 @FileClose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
